--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Aug  7 18:47:48 CEST 2006 Daniel Veillard <veillard@redhat.com>
+
+	* include/libvirt/libvirt.h.in: previous change to libvirt.h should
+	  have gone on .in too
+
 Fri Aug  4 20:19:23 EDT 2006 Daniel Berrange <berrange@redhat.com>
 
 	* src/libvirt.c: Fix off-by-one in validated VCPU number (it is
