--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Aug  7 14:57:12 EDT 2006 Daniel Berrange <berrange@redhat.com>
+
+	* src/xend_internal.c: Corrected string length calculation when appending
+	a CDROM boot device element. Fixes corrupt XML structure.
+
 Mon Aug  7 11:06:20 EDT 2006 Daniel Berrange <berrange@redhat.com>
 
 	* src/xend_internal.c: Added a 'port' attribute to the '<graphics>'
