--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,11 @@
+Mon Aug  7 21:57:41 CEST 2006 Daniel Veillard <veillard@redhat.com>
+
+	* TODO: updated with new items
+
 Mon Aug  7 14:57:12 EDT 2006 Daniel Berrange <berrange@redhat.com>
 
-	* src/xend_internal.c: Corrected string length calculation when appending
-	a CDROM boot device element. Fixes corrupt XML structure.
+	* src/xend_internal.c: Corrected string length calculation when
+	  appending a CDROM boot device element. Fixes corrupt XML structure.
 
 Mon Aug  7 11:06:20 EDT 2006 Daniel Berrange <berrange@redhat.com>
 
