--- a/TODO
+++ b/TODO
@@ -1,4 +1,10 @@
 TODO:
+- check impact of HVM device rename
+  http://lists.xensource.com/archives/html/xen-devel/2006-08/msg00369.html
+- Finish integration of vCPU and affinity APIs
+  https://www.redhat.com/archives/libvir-list/2006-August/msg00017.html
+- check how to better handle renaming of domains (xm rename and cache)
+
 - Create() API, how do we best keep flexibility and allow various
   specific environment and space for evolution (VMX)
 - track change of xend API & XML-RPC
@@ -10,6 +16,14 @@ TODO:
 - add error handling hooks at the python level
 - object unicity for domains at the Python level
 - UUID lookup in hash.c
+
+Other environment:
+- support for QEmu
+- support for UML
+  
+  + in both case raises the problem of listing the domains
+  + UML control layer should be easy at least for one user but incomplete
+  + QEmu control is not easy to plug, c.f. discussion on-list
 
 virsh TODO:
 - decide where will be default directory for domains configurations (/etc/xen/domains/* ?)
@@ -28,7 +42,6 @@ Probable TODOs:
 
 Would-be-nice TODO:
 - man page for virsh and the libraries entry points
-- support for QEmu and other virtualization engines
 - more documentation and examples on using the toolkit
 - examples for the error handling code
 
