--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Wed Aug 16 11:31:59 EDT 2006 Daniel Berrange <berrange@redhat.com>
+
+	* src/libvirt.c: Remove some duplicated changes for VIR_DOMAIN_RO
+	accidentally left in place from last checkin. Tell the drivers to
+	be 'quiet' when opening a RW connection, to stop XenD driver 
+	complaining when we open the test driver.
+	
 Wed Aug 16 17:24:59 CEST 2006 Daniel Veillard <veillard@redhat.com>
 
 	* include/libvirt/virterror.h src/libvirt.c src/virterror.c: enforce
