--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Wed Aug 16 11:36:21 EDT 2006 Daniel Berrange <berrange@redhat.com>
+	
+	* src/xend_internal.c, src/xml.c, src/xml.h: Refactored the 
+	sexpr_uuid method into a re-usable virParseUUID method which
+	can be used by any backend
+	
 Wed Aug 16 11:31:59 EDT 2006 Daniel Berrange <berrange@redhat.com>
 
 	* src/libvirt.c: Remove some duplicated changes for VIR_DOMAIN_RO
