--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Wed Aug 16 11:38:02 EDT 2006 Daniel Berrange <berrange@redhat.com>
+
+	* src/test.c, src/test.h: Allow a hypervisor config to be
+	loaded from an external XML file. Implement drivers for
+	setMemory, setMaxMemory, createLinux, dumpXML, setVcpus.
+	* docs/testnode.xml, docs/testfc4.xml, docs/testfv0.xml:
+	Example config for using with test driver
+	
 Wed Aug 16 11:36:21 EDT 2006 Daniel Berrange <berrange@redhat.com>
 	
 	* src/xend_internal.c, src/xml.c, src/xml.h: Refactored the 
