--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Thu Aug 24 11:03:42 EDT 2006 Daniel Berrange <berrange@redhat.com>
+
+	* tests/Makefile.am: Added a 'valgrind' target which simply
+	calls 'make check', but wrapping execution with valgrind to
+	detect any errors
+
 Thu Aug 24 10:04:02 EDT 2006 Daniel Berrange <berrange@redhat.com>
 
 	* tests/xml2sexpr.c, tests/sexpr2xml.c: New tests suites for
