--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Tue Aug 29 15:41:46 CEST 2006 Daniel Veillard <veillard@redhat.com>
+
+	* python/libvir.c: Pete Vetere pointed out a bug in string cast 
+	  when handling errors in Python
+
 Sat Aug 26 16:36:15 CEST 2006 Daniel Veillard <veillard@redhat.com>
 
 	* src/sexpr.c src/sexpr.h src/xend_internal.c src/xml.c: applied
