* TODO libvirt.spec.in: update * configure.in include/libvirt/virterror.h src/Makefile.am   src/conf.c src/conf.h src/virterror.c src/xen_internal.c:   adding a subset of Xen config file parser, and serializer * tests/Makefile.am tests/conftest.c tests/test_conf.sh   tests/confdata/Makefile.am tests/confdata/fc4.conf   tests/confdata/fc4.out: adding test program for config in and out Daniel

--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 TODO:
+- libvirt-proxy dropping root priviledge after initialization.
 - check impact of HVM device rename
   http://lists.xensource.com/archives/html/xen-devel/2006-08/msg00369.html
 - Finish integration of vCPU and affinity APIs
