--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+Tue Aug 29 23:28:31 CEST 2006 Daniel Veillard <veillard@redhat.com>
+
+	* TODO libvirt.spec.in: update
+	* configure.in include/libvirt/virterror.h src/Makefile.am
+	  src/conf.c src/conf.h src/virterror.c src/xen_internal.c:
+	  adding a subset of Xen config file parser, and serializer
+	* tests/Makefile.am tests/conftest.c tests/test_conf.sh
+	  tests/confdata/Makefile.am tests/confdata/fc4.conf
+	  tests/confdata/fc4.out: adding test program for config in and out
+
 Tue Aug 29 13:14:20 EDT 2006 Daniel Berrange <berrange@redhat.com>
 
 	* src/xend_internal.c: Add handling of HTTP 500 error code
