--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Tue Sep 11 20:23:42 EDT 2006 Daniel Berrange <berrange@redhat.com>
+
+	* docs/Makefile.am: Added test XML files to EXTRA_DIST
+	* tests/confdata/Makefile.am: Fix typo to ensure config
+	files needed by test are distributed
+
 Tue Sep 11 20:11:05 EDT 2006 Daniel Berrange <berrange@redhat.com>
 
 	* src/xend_internal.c, src/xml.c: Added support for new 3.0.3
