--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Thu Sep 21 10:19:01 CEST 2006 Daniel Veillard <veillard@redhat.com>
+
+	* src/Makefile.am: add a tst target to ease building test progs
+	* src/xend_internal.c: fix the reconnection problem to xend pointed
+	  by Philippe Berthault
+	* tests/Makefile.am tests/reconnect.c: add a specific test case
+
 Tue Sep 19 16:59:53 CEST 2006 Daniel Veillard <veillard@redhat.com>
 
 	* src/xen_internal.c: applied patch from Jim Fehlig, about
