--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
 Thu Sep 21 10:19:02 EDT 2006 Daniel Berrange <berrange@redhat.com>
 
+	* src/xen_internal.c: Fork different version of getdomaininfo struct for
+	Xen 3.0.2, and 3.0.3 because the shared_info_frame field is different
+	size on between these versions on 32-bit platforms. Make callers use
+	appropriate struct version matched to hypervisor version, hiding detail
+	in macros to aid readability. Cleanup whitespace to remove tabs. Disable
+	xenHypervisorGetVcpus completely in proxy since its not used.
+
+Thu Sep 21 10:19:02 EDT 2006 Daniel Berrange <berrange@redhat.com>
+
 	* src/xend_internal.c: Check if the physical CPU will fit in the maplen
 	provided by the caller when populating VCPU<->CPU mapping. This is because
 	XenD will return data for 32 physical CPUs, even if the box only has 4
