* src/virsh.c: add #include <locale.h> to be able to compile without   optimization Daniel

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri Sep 29 17:31:36 CEST 2006 Daniel Veillard <veillard@redhat.com>
+
+	* src/virsh.c: add #include <locale.h> to be able to compile without
+	  optimization
+
 Fri Sep 29 17:16:40 CEST 2006 Daniel Veillard <veillard@redhat.com>
 
 	* src/xen_internal.c: fix for system with page size != 4k
